# naturescan-data-platform

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pixi.toml  taskfile.yml
apps/web-app/: .dockerignore  .env.development  .env.production  .oxlintrc.json  Caddyfile  Dockerfile  README.md  components.json  index.html  package.json  pnpm-lock.yaml  prettier.config.ts  vite.config.ts
apps/web-app/.zed/: settings.json
apps/web-app/src/: main.tsx  routeTree.gen.ts
apps/web-app/src/components/: component-example.tsx
apps/web-app/src/components/cog-loader/: index.tsx
apps/web-app/src/components/deck/: MSCog.tsx  RGBCog.tsx
apps/web-app/src/components/layouts/: MapLayout.tsx  fullscreen-layout.tsx  map-layout.tsx
apps/web-app/src/components/map/: DeckMap.tsx  basemap-select.tsx  deck-map.tsx  explorer-map.tsx  view-state-debug.tsx
apps/web-app/src/components/overlays/: asset-card.tsx  breadcrumbs.tsx  data-layer.tsx  overlay-header.tsx  overlay-section.tsx
apps/web-app/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  collapsible.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  textarea.tsx
apps/web-app/src/hooks/: useKeyPress.ts
apps/web-app/src/lib/: deck.ts  projections.ts  segment.ts  spatial-utils.ts  stac-queries.ts  stac-schemas.ts  tanstack-query-client.ts  titiler.ts
apps/web-app/src/routes/: __root.tsx  component-example.tsx  explorer.$collectionId.$itemId.label.tsx  explorer.$collectionId.$itemId.route.tsx  explorer.$collectionId.$itemId.tsx  explorer.$collectionId.index.tsx  explorer.$collectionId.route.tsx  explorer.index.tsx  explorer.route.tsx  explorer.tsx  index.tsx  labeller.tsx  rgb-cog.tsx
apps/web-app/src/routes/explorer/: $itemId.tsx  -breadcrumbs.tsx  -item-card.tsx  -stac-queries.ts  -stac-schema.ts  index.tsx  route.tsx
apps/web-app/src/routes/explorer/$itemId/: -asset-card.tsx  -asset-layers.tsx  -asset-store.ts  -assets.tsx  -item-provider.tsx  -item-store.ts  -item-summary.tsx  -label.tsx  -ms-asset-card.tsx  -ms-asset.tsx  -results-layer.tsx  -rgb-asset-card.tsx  -rgb-asset.tsx  label.tsx  route.tsx
apps/web-app/src/routes/explorer/$itemId/label/: -api.tsx  -bounds-outline-layer.tsx  -image-bounds-layer.tsx  -image-layer.tsx  -label-image-provider.tsx  -label-store.ts  -label-store.tsx  -labelling-controls.tsx  -labelling-utils.tsx  -preview-bounds-layer.tsx  -prompt-layer.tsx  -prompt-types.tsx  -prompts.tsx  -results-layer.tsx  -segment-result-schema.ts  -use-label-image.ts  -use-screen-bounds.ts  route.tsx
apps/web-app/src/routes/labeller/: -api.tsx  -types.tsx  -utils.ts  oldroute.tsx  route.tsx
apps/web-app/src/routes/labeller/-components/: ImageStatusIndicator.tsx
apps/web-app/src/routes/stacv3/: $itemId.tsx  -stac-queries.ts  -stac-schema.ts  index.tsx  route.tsx
apps/web-app/src/stores/: cog-url-store.ts  cogUrlStore.ts  data-layer-store.ts  deck-layer-store.ts  deck-store.ts  map-view-state-store.ts  mapViewStateStore.ts
apps/web-app/src/styles/: global.css
apps/web-app/src/types/: spatial.ts
deploy/: Caddyfile  docker-compose.yml
deploy-ai/: Caddyfile  docker-compose.yml
deploy/production/: docker-compose.yml
notebooks/: 01_create_cog.ipynb  02_create_stac.ipynb  02_create_thumbnails.ipynb  03_create_stac.ipynb  cog_to_stac.ipynb  geotiff_to_cog.ipynb  ns_cogger.py  ns_configs.py  ns_staccer.py  ns_types.py  rgb_stac.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
notebooks/cog-stac/: .gitignore  01_create_cog.ipynb  02_create_thumbnails.ipynb  03_create_stac.ipynb  README.md  STAC_architecture.md  ns_cogger.py  ns_staccer.py  ns_types.py  pyproject.toml  test.tif
notebooks/sam3-uv-test/: pyproject.toml  sam3_directtest.py  sam3test.py
notebooks/sam3-uv-test/__marimo__/session/: sam3_directtest.py.json  sam3test.py.json
services/api-segmentation/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
services/api-segmentation/api_segmentation/: __init__.py  main.py
services/api-segmentation/api_segmentation/api/: routes.py
services/api-segmentation/api_segmentation/core/: __init__.py  config.py
services/api-segmentation/models/: .gitignore
services/api-segmentation/src/api_segmentation/: main.py
services/api-simple-seg/: main.py  pyproject.toml
services/api-stac/: Dockerfile  README.md  collections.json  pyproject.toml
services/api-titiler/: README.md  pyproject.toml  titiler_env_vars.sh
services/asset-server/: README.md
tools/stac-tool/: .gitignore  README.md  activate.bat  pyproject.toml
tools/stac-tool/src/stac_tool/: fs.py  main.py  metadata.py  stac.py  title.py  utils.py
tools/stac-tool/tests/: conftest.py  test_fs.py  test_metadata.py  test_stac.py  test_utils.py
tools/stac-tool/tests/fixtures/: sample_mission.json  sample_user.json
