[project]
authors = [{ name = "James Gregory", email = "james.gregory@utas.edu.au" }]
name = "api-stac"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["stac-fastapi-geoparquet>=0.0.2,<0.0.3", "rustac>=0.7.0,<0.9.0"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks.dev]
cmd = "STAC_FASTAPI_COLLECTIONS_HREF='{{ collections_href }}' uvicorn stac_fastapi.geoparquet.main:app --host 0.0.0.0 --port {{ port }}"

[[tool.pixi.tasks.dev.args]]
arg = "port"
default = "8002"

[[tool.pixi.tasks.dev.args]]
arg = "collections_href"
default = "./collections.json"

[tool.pixi.dependencies]
uvicorn = ">=0.40.0,<0.41"
