[project]
authors = [{ name = "James Gregory", email = "James.Gregory@utas.edu.au" }]
name = "stac-tool"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
stac-tool = "stac_tool.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
stac_tool = { path = ".", editable = true }

[tool.pixi.activation]
scripts = ["activate.bat"]

[tool.pixi.tasks]
test = "pytest tests/ -v"

[tool.pixi.dependencies]
gdal = ">=3.12.2,<4"
marimo = ">=0.20.2,<0.21"
ruff = ">=0.15.4,<0.16"
ty = ">=0.0.18,<0.0.19"
pandas = ">=3.0.1,<4"
geopandas = ">=1.1.2,<2"
shapely = ">=2.1.2,<3"
pydantic = ">=2.12.5,<3"
pyproj = ">=3.7.2,<4"
pystac = ">=1.14.3,<2"
rustac = ">=0.9.7,<0.10"
rio-stac = ">=0.12.0,<0.13"
typer = ">=0.24.0,<0.25"
python-swiftclient = ">=4.10.0,<5"
python-keystoneclient = ">=5.8.0,<6"
rclone = ">=1.73.1,<2"
python-dotenv = ">=1.2.2,<2"
pytest = ">=8.3,<9"
pytest-asyncio = ">=0.25,<0.26"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:pytest_asyncio"]

[tool.marimo.package_management]
manager = "pixi"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true
